[package]
name = "doke" 
version = "0.2.1"
edition = "2024"
description = "The parsing library of `Dokedex`, a game content authoring tool that uses natural-looking language to define a game's objects. This rust crate defines an API to make `doke` parsers by using a simple pipeline syntax, and provides helpers for things like templating, debugging, and common syntax elements." 
license = "MIT OR Apache-2.0" 
authors = ["Eliott Veyrier"]
documentation = "https://docs.rs/doke"
homepage = "https://github.com/Hasenn/Doke-parser.git"
repository = "https://github.com/Hasenn/Doke-parser.git"
readme = "README.md"
keywords = ["parsing", "doke", "dokedex"]  

[dependencies]
glob = "0.3.3"
hashlink = "0.10.0"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
markdown = { version = "1.0.0", features = ["serde"] }
polib = "0.2.0"
regex = "1.11.2"
serde = "1.0.219"
thiserror = "2.0.16"
yaml-rust2 = "0.10.3"


[build-dependencies]
lalrpop = { version = "0.22.2", features = ["lexer"] }
